package ru.penlk.dataBase.entities.users.clients;

import lombok.AllArgsConstructor;
import lombok.Getter;

@AllArgsConstructor
@Getter
public class Client {
    private ClientId id;
}
