package ru.penlk.dataBase.entities.users.managers;

import lombok.AllArgsConstructor;
import lombok.Getter;

@AllArgsConstructor
@Getter
public class Manager {
    private ManagerId id;
}
